--- a/_sass/minima/_galleries.scss
+++ b/_sass/minima/_galleries.scss
@@ -18,7 +18,7 @@
   transition: all 0.3s ease-in-out;
 
   &:hover {
-    transform: scale(1.05);
+    transform: scale(0.95);
   }
 }
 
@@ -59,4 +59,70 @@
 .btn.active {
   background-color: #666;
   color: white;
+}
+
+/* ================= 
+ Gallery 3 - flex
+================= */
+
+.gallery-flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0 -0.75%;
+  padding: 0;
+  display: block;
+  column-gap: 1.5%;
+  counter-reset: item-counter;
+  margin: 0;
+}
+
+.gallery-columns-three {
+  column-count: 3;
+  column-gap: 0.75%;
+
+  @include media-query($on-tablet) {
+    column-count: 2;
+  }
+}
+
+.gallery-item {
+  position: relative;
+
+  break-inside: avoid;
+  counter-increment: item-counter;
+  float: none;
+  padding: 1.25% 0;
+
+  -webkit-flex-basis: 100%;
+  -moz-flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%;
+  max-width: 100%;
+  margin: 0;
+  width: 100%;
+}
+
+.gallery-item a {
+  background-image: none;
+  height: auto;
+  padding-bottom: 0;
+}
+
+.gallery-item .img-gallery {
+  border-style: none;
+  max-width: 100%;
+  height: 100%;
+
+  display: block;
+  position: relative;
+  width: 100%;
+  visibility: visible;
 }
