--- a/_sass/minima/_galleries.scss
+++ b/_sass/minima/_galleries.scss
@@ -1,19 +1,32 @@
-// Gallery One - 3 wide squares 
+/* ============
+ Gallery 
+============ */
 
 .image-gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  justify-content: center;
+  display: block;
+  margin: 0;
+  padding: 0;
 }
 
-.box {
-  margin: 10px;
-}
-
-.img-gallery {
+.gallery-item {
+  position: relative;
+  break-inside: avoid;
+  padding: 2% 0;
+  margin: 0;
   width: 100%;
-  height: 350px;
+}
+
+// <img>
+.img-gallery {
+  display: block;
+  border-style: none;
   object-fit: cover;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+
   transform: scale(1);
   transition: all 0.3s ease-in-out;
 
@@ -22,107 +35,60 @@
   }
 }
 
-// Gallery two
 
-.row {
-  display: -ms-flexbox; /* IE 10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE 10 */
-  flex-wrap: wrap;
-}
+/* ============
+ Grid gallery
+============ */
 
-/* Create two equal columns that sits next to each other */
-.column {
-  -ms-flex: 50%; /* IE 10 */
-  flex: 50%;
-}
-
-.column img {
-  margin-bottom: 5px;
-  vertical-align: middle;
-}
-
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 10px 16px;
-  background-color: #f1f1f1;
-  cursor: pointer;
-  font-size: 18px;
-}
-
-.btn:hover {
-  background-color: #ddd;
-}
-
-.btn.active {
-  background-color: #666;
-  color: white;
-}
-
-/* ================= 
- Gallery 3 - flex
-================= */
-
-.gallery-flex {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  list-style: none;
-  margin: 0 -0.75%;
-  padding: 0;
-  display: block;
+.gallery-grid {
+  display: grid;
+  justify-content: center;
+  align-items: center;
   column-gap: 1.5%;
-  counter-reset: item-counter;
-  margin: 0;
-}
 
-.gallery-columns-three {
-  column-count: 3;
-  column-gap: 0.75%;
-
-  @include media-query($on-tablet) {
-    column-count: 2;
+  // Used to set columns for grid
+  &.gallery-columns-three {
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    .img-gallery {
+      height: 380px;
+    } 
+  }
+  &.gallery-columns-four {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    .img-gallery {
+      height: 300px;
+    } 
   }
 }
 
-.gallery-item {
-  position: relative;
+/* =============== 
+ Flex gallery
+=============== */
 
-  break-inside: avoid;
-  counter-increment: item-counter;
-  float: none;
-  padding: 1.25% 0;
+.gallery-flex {
+  -ms-flex-wrap: wrap; /* IE 10 */
+  flex-wrap: wrap;
+  column-gap: 1.5%;
 
-  -webkit-flex-basis: 100%;
-  -moz-flex-basis: 100%;
-  -ms-flex-preferred-size: 100%;
-  flex-basis: 100%;
-  max-width: 100%;
-  margin: 0;
-  width: 100%;
-}
+  .gallery-item {  
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    padding-top: 1%;
+  }
 
-.gallery-item a {
-  background-image: none;
-  height: auto;
-  padding-bottom: 0;
-}
+  .img-gallery {
+    height: 100%;
+    visibility: visible;
+  }
 
-.gallery-item .img-gallery {
-  border-style: none;
-  max-width: 100%;
-  height: 100%;
+  // Used to set columns for flex
+  &.gallery-columns-three {
+    column-count: 3;
 
-  display: block;
-  position: relative;
-  width: 100%;
-  visibility: visible;
+    @include media-query($on-tablet) {
+      column-count: 2;
+    }
+  }
 }
